--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"start": "wp-scripts start"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^23.7.0"
+		"@wordpress/scripts": "^23.7.0",
+		"@wordpress/stylelint-config": "^20.0.2",
+		"stylelint": "^14.10.0"
 	}
 }
