--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "css-only-carousel",
-	"version": "0.1.0",
+	"version": "1.0.0",
 	"description": "Example block written with ESNext standard and JSX support – build step required.",
 	"author": "The WordPress Contributors",
 	"license": "GPL-2.0-or-later",
@@ -17,6 +17,7 @@
 	"devDependencies": {
 		"@wordpress/scripts": "^23.7.0",
 		"@wordpress/stylelint-config": "^20.0.2",
+		"lodash": "^4.17.21",
 		"stylelint": "^14.10.0"
 	}
 }
