--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "css-only-carousel",
 	"version": "1.0.0",
-	"description": "Example block written with ESNext standard and JSX support – build step required.",
-	"author": "The WordPress Contributors",
+	"description": " A CSS Only Carousel inspired by https://codepen.io/jh3y/pen/WwVKLN.",
+	"author": "Aaron Graham",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
